Fix styling for js-button-loading
Setting this to color-brand makes the indicator invisible.

--- a/assets/app/stylesheets/themes/topaz.scss
+++ b/assets/app/stylesheets/themes/topaz.scss
@@ -421,8 +421,8 @@
             }
 
             &:hover:after {
-                border-color: rgba($color-brand, 0.7);
-                border-top-color: rgba($color-brand, 1);
+                border-color: rgba($color-background, 0.7);
+                border-top-color: rgba($color-background, 1);
             }
         }
 
